Changing the class name of the edit modals 'select patient' dropdown

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -135,7 +135,7 @@
                 <span>-</span>
                 <select id="editApptEndTime" class="js-example-basic-single" name="end_time"></select>
             </div>
-            <div class="modal-new-patient">
+            <div class="modal-edit-patient">
                 <i class="fas fa-user-injured"></i>
                 <select class="js-example-basic-single required" name="patient_id">
                 <option value="" disabled="disabled" selected>Select patient</option>
