Adding 'update appointment' button to edit modal, and moving the form actions to the buttons

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -120,7 +120,7 @@
         </button>
       </div>
       <div class="modal-body">
-          <form action="{{ url_for('delete_appointment') }}" method="POST">
+          <form method="POST">
             <div class="modal-doctor">
                 <i class="fas fa-user-md"></i>
                 <span>{{ selected_doctor.name }}</span>
@@ -146,7 +146,8 @@
             <input class="modal-input" type="hidden" name="doctor_id" value={{ selected_doctor._id }}>
             <input class="modal-input" id="appointment_id" type="hidden" name="appointment_id" value>
             <input class="modal-input" id="day_id" type="hidden" name="day_id" value>
-            <button id="cancel-appointment" type="submit" name="action">Cancel appointment</button>
+            <button formaction="{{ url_for('update_appointment') }}" id="cancel-appointment" type="submit" name="action">Update appointment</button>
+          <button formaction="{{ url_for('delete_appointment') }}" id="delete-appointment" type="submit" name="action">Cancel appointment</button>
           </form>
       </div>
       <div class="modal-footer">
