Adding margin bottom to modal elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -265,6 +265,9 @@ nav {
   width: 90px;
 }
 
+.modal-doctor, .modal-date, .modal-time {
+    margin-bottom: 2px;
+}
 /***********Overlay***********/
 
 .overlay {
