Setting modal title's as bold

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,6 +268,10 @@ nav {
 .modal-doctor, .modal-date, .modal-time {
     margin-bottom: 2px;
 }
+
+.modal-title {
+    font-weight: bold;
+}
 /***********Overlay***********/
 
 .overlay {
