Adding color and border style for the update and add appointment buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -272,6 +272,13 @@ nav {
 .modal-title {
     font-weight: bold;
 }
+
+#add-appointment, #update-button {
+    background-color: #7074dd;
+    color: white;
+    border: none;
+    border-radius: 2px;
+}
 /***********Overlay***********/
 
 .overlay {
