Setting background color on select dropdowns to a lightgrey

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,6 +238,11 @@ nav {
 }
 
 /*********Modals**************/
+
+select {
+   background-color: #faf7f7;
+}
+
 .modal-input {
   border: none;
   outline: none;
