Correcting the id of the update-button

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -148,7 +148,7 @@
       </div>
       <div class="modal-footer">
           <button id="delete-button" formaction="{{ url_for('delete_appointment') }}" id="delete-appointment" type="submit" name="action">Delete appointment</button>
-          <button id="update-button" formaction="{{ url_for('update_appointment') }}" id="cancel-appointment" type="submit" name="action">Update appointment</button>
+          <button id="update-button" formaction="{{ url_for('update_appointment') }}" id="update-appointment" type="submit" name="action">Update appointment</button>
       </div>
     </div>
   </div>
