--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='moment/moment.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/app.js')}}"></script>
+    <script src="{{url_for('static', filename='moment/moment.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/app.js')}}"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
