Chaning startTime id to class to resolve duplicate id issue

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -86,7 +86,7 @@
             </div>
             <div class="modal-time">
                 <i class="far fa-clock"></i>
-                <input class="modal-input" id="startTime" type="text" name="start_time" value readonly>
+                <input class="modal-input start-time" type="text" name="start_time" value readonly>
                 <span>-</span>
                 <select id="newApptEndTime" class="js-example-basic-single" name="end_time"></select>
             </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="modal-time">
                 <i class="far fa-clock"></i>
-                <input class="modal-input" id="startTime" type="text" name="start_time" value readonly>
+                <input class="modal-input start-time" type="text" name="start_time" value readonly>
                 <span>-</span>
                 <select id="editApptEndTime" class="js-example-basic-single" name="end_time"></select>
             </div>
