Chaning modal date id to class to avoid duplicate id's

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -82,7 +82,7 @@
             </div>
             <div class="modal-date">
                 <i class="far fa-calendar-alt"></i>
-                <input class="modal-input" id="date" type="text" name="date" value={{ date }} readonly>
+                <input class="modal-input date" type="text" name="date" value={{ date }} readonly>
             </div>
             <div class="modal-time">
                 <i class="far fa-clock"></i>
@@ -126,7 +126,7 @@
             </div>
             <div class="modal-date">
                 <i class="far fa-calendar-alt"></i>
-                <input class="modal-input" id="date" type="text" name="date" value={{ date }} readonly>
+                <input class="modal-input date" type="text" name="date" value={{ date }} readonly>
             </div>
             <div class="modal-time">
                 <i class="far fa-clock"></i>
